2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/28_if_elseif_cond_comp.deca
// Description :
//     Test de : if , else if , else    
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024
{
    int x ; 

    if(2!=3)
    {
        x = 1 ;
    }
    else if(3 > 2)
    {
        x = 2 ;
    }
    else
    {
        x = 3 ;
    }
}