2A/05_Projet_GL/src/test/deca/context/invalid/complet/66_method_call_non_def.deca
// Description :
//   Appel de méthode qui n'existe pas 
// Resultats :
//    ligne 19 :  mult identificateur non déclaré
// Historique : 
//  cree le 16/01/2024


class A {
    int add(int a , int b) {
        return a + b ; 
    }
}


{
    A a = new A();

    int res = a.mult(1, 2);
}